--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-registration==3.1
 django-taggit==1.3.0
 django-user-accounts==3.0.2
 Faker==0.9.1
+gunicorn==20.0.4
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 mixer==6.1.3
