--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==19.3.0
 colorama==0.4.3
 confusable-homoglyphs==3.2.0
 coverage==5.1
+dj-database-url==0.5.0
 Django==3.0.6
 django-appconf==1.0.4
 django-registration==3.1
@@ -29,3 +30,5 @@ six==1.15.0
 sqlparse==0.3.1
 text-unidecode==1.2
 wcwidth==0.2.3
+whitenoise==5.2.0
+psycopg2==2.8.5
